[tool.poetry]
name = "url-fetch-example"
version = "0.1.0"
description = "Aysnc vs sync url fetching example"
authors = ["wallawaz <bwallad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
requests = "^2.23.0"
click = "^7.1.2"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
url-fetch-example = "url_fetch_example.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
